# sirEdit

./: .gitignore  CMakeLists.txt  CMakeLists_skill.txt  README.md  de.marko10-000.sirEdit.json  meson.build  resource_encoder.cpp
data/gui/: mainWindow.glade  mainWindow.glade~  startupWindow.glade  startupWindow.glade~
include/sirEdit/: main.hpp
include/sirEdit/data/: fields.hpp  serialize.hpp  skillInclude.hpp  specUpdater.hpp  tools.hpp  types.hpp
include/sirEdit/utils/: conver.hpp
sirSpec/: annotations.skill  tools.skill
src/: CMakeLists.txt  classInfo.hpp  main.cpp  runCodegen.cpp
src/data/: HistoricalView.cpp  includeSearch.cpp  serialize.cpp  serializeSIR.cpp
src/gui/: loadFile.cpp  mainWindow.cpp  mainWindow.hpp  overview.cpp  startupWindow.cpp  startupWindow.hpp  toolsEditor.cpp
src/unittests/rules/: model.hpp  rule2.cpp  rule3.cpp  rule4.cpp  rule6.cpp  rule7.cpp
